--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,16 @@
 
     <groupId>com.bramkempen</groupId>
     <artifactId>animalshelter</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +29,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
